service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-active
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: rollouts-demo
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-preview
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: rollouts-demo
